--- a/apps/alpha/templates/base/messages.html
+++ b/apps/alpha/templates/base/messages.html
@@ -1,7 +1,10 @@
 {# plantilla para mensajes que son administrados por messages framework #}
-
-<ul>
-  {% for message in messages %}
-    <li>{{ message }}</li>
-  {% endfor %}
-</ul>
+{% load i18n %}
+{% for message in messages %}
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+  <strong>{% translate 'System message:' %}</strong> {{ message }}
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+{% endfor %}
