--- a/apps/alpha/templates/base/base.html
+++ b/apps/alpha/templates/base/base.html
@@ -5,6 +5,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
   <title>{% block title %}{% endblock title %}</title>
   {# hojas de estilo y scripts de cabecera en este espacio #}
   {% block extrahead %}{% endblock extrahead %}
@@ -13,13 +16,22 @@
 <body>
   {% block navbar %}{% include "base/navbar.html" %}{% endblock navbar %}
 
-  {% block messages %}{% include "base/messages.html" %}{% endblock messages %}
+  {% if messages %}
+    {% block messages %}{% include "base/messages.html" %}{% endblock messages %}
+  {% endif %}
 
   {% block content %}{% endblock content %}
 
   {% block footer %}{% include "base/footer.html" %}{% endblock footer %}
 
   {# scripts al final de página en este esapcio #}
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+    crossorigin="anonymous"></script>
+
   {% block extrascript %}
   {# cualquier script adicional para alguna página en particular aquí #}
   {% endblock extrascript %}
