--- a/apps/alpha/templates/base/navbar.html
+++ b/apps/alpha/templates/base/navbar.html
@@ -1,5 +1,22 @@
 {# Aqui el navbar del proyecto #}
 {% load i18n %}
 
-<p>{% translate "A fake nav bar" %} / <a href="{% url 'alpha:home' %}">{% translate "Home" %}</a> </p>
-{% if user.is_authenticated %}<p><a href="{% url 'users:change_password' %}">{% translate "Change Password" %}</a> / <a href="{% url 'users:logout' %}">{% translate "Logout" %}</a></p>{% else %}<p><a href="{% url 'users:login' %}">{% translate "Login" %}</a> / <a href="{% url 'users:form_reset_password' %}">{% translate "Forgot Password?" %}</a> / <a href="{% url 'users:add' %}">{% translate 'SignUp' %}</a></p>{% endif %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">App</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-link active" href="{% url 'alpha:home' %}">{% translate "Home" %} <span class="sr-only">(current)</span></a>
+      {% if user.is_authenticated %}
+      <a class="nav-link" href="{% url 'users:change_password' %}">{% translate "Change Password" %}</a>
+      <a class="nav-link" href="{% url 'users:logout' %}">{% translate "Logout" %}</a>
+      {% else %}
+      <a class="nav-link" href="{% url 'users:login' %}">{% translate "Login" %}</a>
+      <a class="nav-link" href="{% url 'users:form_reset_password' %}">{% translate "Forgot Password?" %}</a>
+      <a class="nav-link" href="{% url 'users:add' %}">{% translate 'SignUp' %}</a>
+      {% endif %}
+    </div>
+  </div>
+</nav>
