--- a/apps/users/templates/registration/password_reset_done.html
+++ b/apps/users/templates/registration/password_reset_done.html
@@ -1,7 +1,8 @@
 {# plantilla con mensaje de que  se ha enviado un correo para recuperar la contraseña #}
-{% extends "base/base.html" %}
+{% extends "users/base.html" %}
 {% load i18n %}
 {% block title %}{% translate "Check your email" %}{% endblock title %}
-{% block content %}
-<p>{% translate "If you provided a registered mail you will receive a message with instructions to recovery your password. If you don't see any message in the next 5 minutes, please check your spam folder." %}</p>
-{% endblock content %}
+{% block form_title %}{% translate "Check your email" %}{% endblock form_title %}
+{% block auth_form %}
+  <p>{% translate "If you provided a registered mail you will receive a message with instructions to recovery your password. If you don't see any message in the next 5 minutes, please check your spam folder." %}</p>
+{% endblock auth_form %}
