--- a/apps/users/templates/registration/password_reset_form.html
+++ b/apps/users/templates/registration/password_reset_form.html
@@ -1,11 +1,13 @@
 {# plantilla con formulario para ingresar correo de recuperación de contraseña #}
-{% extends "base/base.html" %}
+{% extends "users/base.html" %}
+{% load crispy_forms_tags %}
 {% load i18n %}
 {% block title %}{% translate "Reset password" %}{% endblock title %}
-{% block content %}
-<form method="post">
+{% block form_title %}{% translate "Reset password" %}{% endblock form_title %}
+{% block auth_form %}
+<form method="POST">
   {% csrf_token %}
-  {{ form.as_p}}
-  <button type="submit">{% translate "Reset password" %}</button>
+  {{ form|crispy }}
+  <button type="submit" class="btn btn-primary">{% translate "Reset password" %}</button>
 </form>
-{% endblock content %}
+{% endblock auth_form %}
