Corrección de error tipográfico

--- a/apps/alpha/templates/base/base.html
+++ b/apps/alpha/templates/base/base.html
@@ -24,7 +24,7 @@
 
   {% block footer %}{% include "base/footer.html" %}{% endblock footer %}
 
-  {# scripts al final de página en este esapcio #}
+  {# scripts al final de página en este espacio #}
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
