--- a/apps/alpha/templates/base/base.html
+++ b/apps/alpha/templates/base/base.html
@@ -5,8 +5,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
 
   <title>{% block title %}{% endblock title %}</title>
@@ -14,11 +15,12 @@
   {% block extrahead %}{% endblock extrahead %}
 </head>
 
-<body>
+<body style="margin-bottom: 150px;">
+
   {% block navbar %}{% include "base/navbar.html" %}{% endblock navbar %}
 
   {% if messages %}
-    {% block messages %}{% include "base/messages.html" %}{% endblock messages %}
+  {% block messages %}{% include "base/messages.html" %}{% endblock messages %}
   {% endif %}
 
   {% block content %}{% endblock content %}
@@ -26,12 +28,10 @@
   {% block footer %}{% include "base/footer.html" %}{% endblock footer %}
 
   {# scripts al final de página en este espacio #}
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-    crossorigin="anonymous"></script>
+
 
   {% block extrascript %}
   {# cualquier script adicional para alguna página en particular aquí #}
