--- a/apps/alpha/templates/base/messages.html
+++ b/apps/alpha/templates/base/messages.html
@@ -3,8 +3,6 @@
 {% for message in messages %}
 <div class="alert alert-success alert-dismissible fade show" role="alert">
   <strong>{% translate 'System message:' %}</strong> {{ message }}
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
 {% endfor %}
