--- a/apps/alpha/templates/base/navbar.html
+++ b/apps/alpha/templates/base/navbar.html
@@ -2,20 +2,35 @@
 {% load i18n %}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">App</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-link active" href="{% url 'alpha:home' %}">{% translate "Home" %} <span class="sr-only">(current)</span></a>
-      {% if user.is_authenticated %}
-      <a class="nav-link" href="{% url 'users:change_password' %}">{% translate "Change Password" %}</a>
-      <a class="nav-link" href="{% url 'users:logout' %}">{% translate "Logout" %}</a>
-      {% else %}
-      <a class="nav-link" href="{% url 'users:login' %}">{% translate "Login" %}</a>
-      <a class="nav-link" href="{% url 'users:form_reset_password' %}">{% translate "Forgot Password?" %}</a>
-      <a class="nav-link" href="{% url 'users:add' %}">{% translate 'SignUp' %}</a>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">App</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContents"
+      aria-controls="navbarContents" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarContents">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" href="{% url 'alpha:home' %}">{% translate "Home" %}</a>
+        </li>
+        {% if user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'users:change_password' %}">{% translate "Change Password" %}</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'users:logout' %}">{% translate "Logout" %}</a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'users:login' %}">{% translate "Login" %}</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'users:form_reset_password' %}">{% translate "Forgot Password?" %}</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'users:add' %}">{% translate 'SignUp' %}</a>
+        </li>
+      </ul>
       {% endif %}
     </div>
   </div>
